@@ -2680,6 +2680,7 @@ gmp_mpn_functions="$extra_functions					   \
   trialdiv remove							   \
   and_n andn_n nand_n ior_n iorn_n nior_n xor_n xnor_n			   \
   copyi copyd zero tabselect						   \
+  comb_tables								   \
   $gmp_mpn_functions_optional"
 
 define(GMP_MULFUNC_CHOICES,
